--- a/Angular/A3/angular.json
+++ b/Angular/A3/angular.json
@@ -2,7 +2,8 @@
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
   "cli": {
-    "packageManager": "npm"
+    "packageManager": "npm",
+    "analytics": "e2149172-7457-4bc8-9501-1cf5092e682a"
   },
   "newProjectRoot": "projects",
   "projects": {
